styles/Home.module.css
.heroSection {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  width: 96%;
  margin-top: 30px;
}

.heroContent {
  flex: 1;
  margin-right: 25px;
}

.linkedInBtn {
  width: 140px;
  height: auto;
  margin-top: -50px;
}

.linkedInBtnDiv {
  display: flex;
  width: 94%;
  margin-top: -30px;
}

.section2 {
  text-align: center;
}

.mainHeading,
.mainHeading1 {
  font-size: 2.5rem;
}

.mainHeading {
  margin-bottom: -5px;
}

.mainHeading1 {
  margin-bottom: -40px;
  margin-top: -10px;
}

.workImg {
  width: 200px;
  height: auto;
  cursor: pointer;
}

.workCard {
  width: 250px;
}

.workDiv {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 1100px;
  margin: 0 auto;
  padding-right: .5rem;
  padding-left: .5rem;
  padding-bottom: .5rem;
}

.bgColorDiv {
  position: relative;
  margin-left: -50vw;
  padding-right: 7px;
  left: 50%;
  right: 50%;
  width: 100vw;
  display: flex;
  flex-direction: column;
  background-color: #d6e2e2;
  padding-bottom: 20px;
}

.contactDiv {
  display: flex;
  justify-content: center;
  gap: 40px;
  align-items: center;
}

.contactBtn {
  max-width: 120px;
  height: auto;
}

.bgColorContent {
  max-width: 800px;
  margin: 0 auto;
}

.img {
  max-width: 380px;
  height: auto;
  object-fit: contain;
  margin-right: .5rem;
}

@keyframes bob {
  0% {
    transform: translateY(0);
  }

  50% {
    transform: translateY(-2px);
  }

  100% {
    transform: translateY(0);
  }
}

.bob:hover {
  animation: bob 0.8s infinite;
}

@media (max-width: 1200px) {
  .workImg {
    width: 180px;
  }

  .workCard {
    width: 250px;
  }

  .workDiv {
    width: 950px;
  }
}

@media (max-width: 1000px) {
  .workImg {
    width: 160px;
  }

  .workDiv {
    width: 870px;
  }
}

@media (max-width: 900px) {
  .img {
    max-width: 270px;
    height: auto;
  }

  .workDiv {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    column-gap: 50px;
    row-gap: 20px;
    width: auto;
  }

  .linkedInBtn {
    margin-top: -20px;
  }
}

@media (max-width: 775px) {

  .linkedInBtn {
    margin-top: -10px;
  }
}

@media (max-width: 730px) {

  .mainHeading,
  .mainHeading1 {
    font-size: 2.3rem;
  }

  .linkedInBtn {
    width: 120px;
  }
}

@media (max-width: 670px) {
  
  .mainHeading,
  .mainHeading1 {
    font-size: 2.1rem;
  }
}

@media (max-width: 639px) {
  .img {
    max-width: 250px;
    height: auto;
  }

  .mainHeading,
  .mainHeading1 {
    font-size: 2rem;
  }

  .mainHeading1 {
    margin-bottom: -30px;
  }

  .workDiv {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    column-gap: 20px;
    row-gap: 20px;
    justify-content: center;
    width: 80%;
  }

  .workImg {
    width: 70%;
  }
}

@media (max-width: 605px) {

  .heroContent {
    margin-right: 10px;
  }

  .mainHeading,
  .mainHeading1 {
    font-size: 1.8rem;
    margin-left: 10px;
  }

  .linkedInBtnDiv {
    width: 91%;
  }

  .linkedInBtn {
    width: 100px;
    margin-top: 30px;
    margin-bottom: -30px;
  }

  .heroSection {
    flex-direction: column;
    margin: auto;
  }

  .heroContent {
    text-align: center;
    margin: 0;
  }

  .img {
    max-width: 230px;
    margin: 0;
  }

  .mainHeading {
    margin-bottom: 30px;
  }

  .linkedInBtnDiv {
    width: 100%;
    justify-content: center;
    margin-top: 0px;
  }

  .introP {
    margin-bottom: 30px;
    margin-top: -15px;
    max-width: 400px;
  }

}

@media (max-width: 530px) {

  .img {
    max-width: 200px;
    height: auto;
  }

  .workImg {
    width: 60%;
  }

  .workDiv {
    column-gap: 10px;
  }

  .workCard {
    width: 200px;
  }

  .workCard>p {
    font-size: .9rem;
  }

  .h3 {
    font-size: 1rem;
  }
}

@media (max-width: 510px) {

  .mainHeading,
  .mainHeading1 {
    font-size: 1.6rem;
  }

  .mainHeading1 {
    margin-bottom: -25px;
  }

  .mainHeading {
    margin-bottom: 20px;
  }

  .introP {
    margin-top: -10px;
  }

}

@media (max-width: 485px) {

  .contactBtn {
    max-width: 100px;
  }

  .contactDiv {
    gap: 30px;
  }
}

@media (max-width: 455px) {

  .contactDiv {
    gap: 20px;
  }

  .contactBtn {
    max-height: 100px;
  }

  .mainHeading,
  .mainHeading1 {
    font-size: 1.6rem;
  }

}

@media (max-width: 420px) {

  .introP {
    font-size: .9rem;
  }

  .contactBtn {
    max-width: 90px;
  }

  .contactDiv {
    gap: 20px;
  }

  .workDiv {
    column-gap: 0px;
  }

  .workCard {
    width: 180px;
  }

  .mainHeading {
    margin-bottom: 30px;
   }
}

@media (max-width: 360px) {

  .introP,
  .workCard>p,
  .bgColorContent>p  {
    font-size: .8rem;
  }

  .contactBtn {
    max-height: 90px;
  }

  .workCard {
    width: 170px;
  }

}

@media (max-width: 300px) {

  .mainHeading,
  .mainHeading1 {
    font-size: 1.5rem;
  }
}

